<resources>
    <string name="app_name">Final</string>
    <string name="j1">AMIKOM</string>
    <string name="j2">PINJAMIN</string>
    <string name="login">Login</string>
    <string name="hint_username">UserName</string>
    <string name="hint_pass">Password</string>
    <string name="akun">Belum Memiliki Akun ? <b><font fgcolor='#3CDA85'>Register.</font></b></string>
    <string name="j3">AMIKOM PINJAM RUANG DAN BUKU</string>
    <string name="tentang">Aplikasi Amikom Pinjamin adalah sebuah aplikasi yang di buat untuk memenuhi
        Tugas Final Project Mata Kuliah Mobile Programming 1 yang di ampu oleh Bpk. Ganjar Widiatmansyah</string>
    <string name="mm_book">Multimedia alat untuk meningkatkan keunggulan bersaing ini memberikan gambaran bagaimana multimedia secara teori dan bagaimana multimedia dalam aplikasi sebagai alat untuk meningkatkan keunggulan bersaing.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
