<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="fitCenter"
        android:background="@drawable/bg1"
        />
    <TextView
        android:id="@+id/text1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/j1"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:gravity="center"
        android:text="@string/j2"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:layout_marginTop="224dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="sans"

        />

    <EditText
        android:id="@+id/nim"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:background="@drawable/line1"
        android:gravity="center"
        android:hint="@string/hint_nim"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/gray" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="580dp"
        android:background="@drawable/line1"
        android:gravity="center"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/gray" />

    <ImageButton
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="629dp"
        android:background="@drawable/btn1" />

    <TextView
        android:id="@+id/register_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/akun"
        android:textColor="@color/colorTitle"
        android:textSize="15dp"/>

</RelativeLayout>